fix: adjusted storybook item spacing

--- a/components/00-base/typography/cl-typography.scss
+++ b/components/00-base/typography/cl-typography.scss
@@ -3,7 +3,11 @@
   padding: 0;
   margin: 0;
 
+  &__item {
+    margin-bottom: var(--size-spacing-5);
+  }
+
   &__family {
-    margin: 0 0 4rem;
+    margin: 0 0 var(--size-spacing-6);
   }
 }
